agrego imagen de producto

--- a/Trabajo_Practico_final_en_angular/src/app/Componentes/card-producto/card-producto.html
+++ b/Trabajo_Practico_final_en_angular/src/app/Componentes/card-producto/card-producto.html
@@ -1,5 +1,6 @@
 <div [routerLink]="['/detalle-producto',id]">
     <h3>{{title}}</h3>
+    <img [src]="image">
     <p>Precio: {{price}}</p>
     <p>Categoria: {{category}}</p>
 </div>
