--- a/Trabajo_Practico_final_en_angular/src/app/Vistas/home/home.html
+++ b/Trabajo_Practico_final_en_angular/src/app/Vistas/home/home.html
@@ -11,6 +11,7 @@
         
         [id] = "producto.id"
         [title] = "producto.title"
+        [image] = "producto.image"
         [price] = "producto.price"
         [description] = "producto.description"
         [category] = "producto.category"
