--- a/Trabajo_Practico_final_en_angular/src/app/Componentes/header/header.html
+++ b/Trabajo_Practico_final_en_angular/src/app/Componentes/header/header.html
@@ -1,6 +1,7 @@
-<header>
-    <nav>
-        <ul>
+<header class="header">
+    <nav class="navbar">
+        <div class="logo">🛍️</div>
+        <ul class="nav-links">
             <li><a routerLink = "/">Inicio</a></li>
             <li><a routerLink = "/contacto">Contacto</a></li>
             
